[package]
name = "whatwg-datetime"
version = "0.1.1"
authors = [
	"Samantha Nguyen, <contact@samanthanguyen.me>",
]
description = "A Rust crate for parsing the datetime microsyntax, as defined by the WHATWG HTML Standard"
repository = "https://github.com/neoncitylights/whatwg-rust"
documentation = "https://docs.rs/whatwg-datetime"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["whatwg", "html", "html-datetime", "datetime"]
categories = ["parsing", "text-processing"]

[dependencies]
# chrono < 0.5 brings in a deprecated version of the `time` crate via `oldtime` feature by default
# this makes it explicitly not do this as there is an advisory warning against this:
# See: https://github.com/chronotope/chrono/issues/602
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "wasmbind"] }
whatwg-infra = { version = "1.1.0", path = "../infra" }
