[package]
name = "whatwg-infra"
version = "1.1.0"
authors = [
	"Samantha Nguyen, <contact@samanthanguyen.me>",
]
description = "Tiny Rust-based implementation of the WHATWG Infra Standard"
repository = "https://github.com/neoncitylights/whatwg-rust"
documentation = "https://docs.rs/whatwg-infra"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.63.0"
edition = "2021"
keywords = ["whatwg", "infra", "spec", "specification", "standard"]
categories = ["no-std", "parsing", "text-processing"]
